seaqt/QtWidgets/gen_qmenubar.nim


proc fcQMenuBar_new(parent: pointer): ptr cQMenuBar {.importc: "QMenuBar_new".}
proc fcQMenuBar_new2(): ptr cQMenuBar {.importc: "QMenuBar_new2".}
proc fcQMenuBar_metaObject(self: pointer, ): pointer {.importc: "QMenuBar_metaObject".}
proc fcQMenuBar_metacast(self: pointer, param1: cstring): pointer {.importc: "QMenuBar_metacast".}
proc fcQMenuBar_tr(s: cstring): struct_miqt_string {.importc: "QMenuBar_tr".}
proc fcQMenuBar_addMenu(self: pointer, menu: pointer): pointer {.importc: "QMenuBar_addMenu".}
proc fcQMenuBar_addMenuWithTitle(self: pointer, title: struct_miqt_string): pointer {.importc: "QMenuBar_addMenuWithTitle".}
proc fcQMenuBar_addMenu2(self: pointer, icon: pointer, title: struct_miqt_string): pointer {.importc: "QMenuBar_addMenu2".}
proc fcQMenuBar_addSeparator(self: pointer, ): pointer {.importc: "QMenuBar_addSeparator".}
proc fcQMenuBar_insertSeparator(self: pointer, before: pointer): pointer {.importc: "QMenuBar_insertSeparator".}
proc fcQMenuBar_insertMenu(self: pointer, before: pointer, menu: pointer): pointer {.importc: "QMenuBar_insertMenu".}
proc fcQMenuBar_clear(self: pointer, ): void {.importc: "QMenuBar_clear".}
proc fcQMenuBar_activeAction(self: pointer, ): pointer {.importc: "QMenuBar_activeAction".}
proc fcQMenuBar_setActiveAction(self: pointer, action: pointer): void {.importc: "QMenuBar_setActiveAction".}
proc fcQMenuBar_setDefaultUp(self: pointer, defaultUp: bool): void {.importc: "QMenuBar_setDefaultUp".}
proc fcQMenuBar_isDefaultUp(self: pointer, ): bool {.importc: "QMenuBar_isDefaultUp".}
proc fcQMenuBar_sizeHint(self: pointer, ): pointer {.importc: "QMenuBar_sizeHint".}
proc fcQMenuBar_minimumSizeHint(self: pointer, ): pointer {.importc: "QMenuBar_minimumSizeHint".}
proc fcQMenuBar_heightForWidth(self: pointer, param1: cint): cint {.importc: "QMenuBar_heightForWidth".}
proc fcQMenuBar_actionGeometry(self: pointer, param1: pointer): pointer {.importc: "QMenuBar_actionGeometry".}
proc fcQMenuBar_actionAt(self: pointer, param1: pointer): pointer {.importc: "QMenuBar_actionAt".}
proc fcQMenuBar_setCornerWidget(self: pointer, w: pointer): void {.importc: "QMenuBar_setCornerWidget".}
proc fcQMenuBar_cornerWidget(self: pointer, ): pointer {.importc: "QMenuBar_cornerWidget".}
proc fcQMenuBar_isNativeMenuBar(self: pointer, ): bool {.importc: "QMenuBar_isNativeMenuBar".}
proc fcQMenuBar_setNativeMenuBar(self: pointer, nativeMenuBar: bool): void {.importc: "QMenuBar_setNativeMenuBar".}
proc fcQMenuBar_setVisible(self: pointer, visible: bool): void {.importc: "QMenuBar_setVisible".}
proc fcQMenuBar_triggered(self: pointer, action: pointer): void {.importc: "QMenuBar_triggered".}
proc fcQMenuBar_connect_triggered(self: pointer, slot: int) {.importc: "QMenuBar_connect_triggered".}
proc fcQMenuBar_hovered(self: pointer, action: pointer): void {.importc: "QMenuBar_hovered".}
proc fcQMenuBar_connect_hovered(self: pointer, slot: int) {.importc: "QMenuBar_connect_hovered".}
proc fcQMenuBar_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMenuBar_tr2".}
proc fcQMenuBar_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMenuBar_tr3".}
proc fcQMenuBar_setCornerWidget2(self: pointer, w: pointer, corner: cint): void {.importc: "QMenuBar_setCornerWidget2".}
proc fcQMenuBar_cornerWidget1(self: pointer, corner: cint): pointer {.importc: "QMenuBar_cornerWidget1".}
proc fQMenuBar_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QMenuBar_virtualbase_sizeHint".}
proc fcQMenuBar_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_sizeHint".}
proc fQMenuBar_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QMenuBar_virtualbase_minimumSizeHint".}
proc fcQMenuBar_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_minimumSizeHint".}
proc fQMenuBar_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QMenuBar_virtualbase_heightForWidth".}
proc fcQMenuBar_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_heightForWidth".}
proc fQMenuBar_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QMenuBar_virtualbase_setVisible".}
proc fcQMenuBar_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_setVisible".}
proc fQMenuBar_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_changeEvent".}
proc fcQMenuBar_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_changeEvent".}
proc fQMenuBar_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_keyPressEvent".}
proc fcQMenuBar_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_keyPressEvent".}
proc fQMenuBar_virtualbase_mouseReleaseEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_mouseReleaseEvent".}
proc fcQMenuBar_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_mouseReleaseEvent".}
proc fQMenuBar_virtualbase_mousePressEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_mousePressEvent".}
proc fcQMenuBar_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_mousePressEvent".}
proc fQMenuBar_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_mouseMoveEvent".}
proc fcQMenuBar_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_mouseMoveEvent".}
proc fQMenuBar_virtualbase_leaveEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_leaveEvent".}
proc fcQMenuBar_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_leaveEvent".}
proc fQMenuBar_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_paintEvent".}
proc fcQMenuBar_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_paintEvent".}
proc fQMenuBar_virtualbase_resizeEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_resizeEvent".}
proc fcQMenuBar_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_resizeEvent".}
proc fQMenuBar_virtualbase_actionEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_actionEvent".}
proc fcQMenuBar_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_actionEvent".}
proc fQMenuBar_virtualbase_focusOutEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_focusOutEvent".}
proc fcQMenuBar_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_focusOutEvent".}
proc fQMenuBar_virtualbase_focusInEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_focusInEvent".}
proc fcQMenuBar_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_focusInEvent".}
proc fQMenuBar_virtualbase_timerEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_timerEvent".}
proc fcQMenuBar_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_timerEvent".}
proc fQMenuBar_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QMenuBar_virtualbase_eventFilter".}
proc fcQMenuBar_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_eventFilter".}
proc fQMenuBar_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QMenuBar_virtualbase_event".}
proc fcQMenuBar_override_virtual_event(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_event".}
proc fQMenuBar_virtualbase_initStyleOption(self: pointer, option: pointer, action: pointer): void{.importc: "QMenuBar_virtualbase_initStyleOption".}
proc fcQMenuBar_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_initStyleOption".}
proc fQMenuBar_virtualbase_devType(self: pointer, ): cint{.importc: "QMenuBar_virtualbase_devType".}
proc fcQMenuBar_override_virtual_devType(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_devType".}
proc fQMenuBar_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QMenuBar_virtualbase_hasHeightForWidth".}
proc fcQMenuBar_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_hasHeightForWidth".}
proc fQMenuBar_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QMenuBar_virtualbase_paintEngine".}
proc fcQMenuBar_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_paintEngine".}
proc fQMenuBar_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_mouseDoubleClickEvent".}
proc fcQMenuBar_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_mouseDoubleClickEvent".}
proc fQMenuBar_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_wheelEvent".}
proc fcQMenuBar_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_wheelEvent".}
proc fQMenuBar_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_keyReleaseEvent".}
proc fcQMenuBar_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_keyReleaseEvent".}
proc fQMenuBar_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_enterEvent".}
proc fcQMenuBar_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_enterEvent".}
proc fQMenuBar_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_moveEvent".}
proc fcQMenuBar_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_moveEvent".}
proc fQMenuBar_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_closeEvent".}
proc fcQMenuBar_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_closeEvent".}
proc fQMenuBar_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_contextMenuEvent".}
proc fcQMenuBar_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_contextMenuEvent".}
proc fQMenuBar_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_tabletEvent".}
proc fcQMenuBar_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_tabletEvent".}
proc fQMenuBar_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_dragEnterEvent".}
proc fcQMenuBar_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_dragEnterEvent".}
proc fQMenuBar_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_dragMoveEvent".}
proc fcQMenuBar_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_dragMoveEvent".}
proc fQMenuBar_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_dragLeaveEvent".}
proc fcQMenuBar_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_dragLeaveEvent".}
proc fQMenuBar_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_dropEvent".}
proc fcQMenuBar_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_dropEvent".}
